end timestamp added to storage and processing
